<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_all"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_edit"
        android:icon="@drawable/ic_baseline_edit_24"
        android:title="@string/edit_produk"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu_delete"
        android:icon="@drawable/ic_baseline_delete_24"
        android:title="@string/hapus"
        app:showAsAction="ifRoom"/>

</menu>