<resources>
    <string name="app_name">Catatan\nToko</string>
    <string name="version">V1.3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="nama_toko">CaTok (Catatan Toko)</string>
    <string name="data_produk">Data Produk</string>
    <string name="data_produk2">Data Produk</string>
    <string name="tambah_produk">Tambah Produk</string>
    <string name="transaksi_produk">Transaksi Produk</string>
    <string name="pengaturan">Pengaturan</string>
    <string name="beranda">Beranda</string>
    <string name="pencarian">Pencarian</string>
    <string name="harga_jual">Harga Jual</string>
    <string name="modal">Modal</string>
    <string name="jumlah_modal_arg">: Rp. %1$.0f / %2$s pcs</string>
    <string name="harga_jual_arg">: Rp. %1$.0f / %2$s pcs</string>
    <string name="modal_arg_2">Modal:\n%1$s / %2$s %3$s</string>
    <string name="harga_jual_arg_2">Harga Jual:\n%1$s / %2$s %3$s</string>
    <string name="modal_arg_linear">Modal: %1$s / %2$s %3$s</string>
    <string name="harga_jual_arg_linear">Harga Jual: %1$s / %2$s %3$s</string>
    <string name="stok_arg">Stok : %1$s</string>
    <string name="scan">SCAN</string>
    <string name="satuan">Satuan</string>
    <string name="stok_awal">Stok Awal</string>
    <string name="batal">Batal</string>
    <string name="simpan">Simpan</string>
    <string name="data_produk_kosong">Tidak ada data.</string>
    <string name="hapus">Hapus</string>
    <string name="retur_msg">Apakah anda yakin ingin meretur transaksi ini ?</string>
    <string name="pesan_hapus">Hapus produk terpilih?</string>
    <string name="produk_klik">%1$s diklik!</string>
    <string name="select_all">Select All</string>
    <string name="pesan_hapus_semua">Hapus <b>semua</b> produk ?</string>
    <string name="berhasil_menghapus_produk">Berhasil Menghapus Produk !</string>
    <string name="berhasil_menghapus_semua_produk">Berhasil Menghapus Semua Produk !</string>
    <string name="edit_produk">Edit Produk</string>
    <string name="grafik">Grafik</string>
    <string name="histori_transaksi">Histori Transaksi</string>
    <string name="search">Search</string>
    <string name="harga">Rp %1$s / 1 pcs</string>
    <string name="total_arg"><u>RP %1$.0f</u></string>
    <string name="total_arg2">: <u>RP %1$.0f</u></string>
    <string name="jenis_pembayaran_arg"><u>%1$s</u></string>
    <string name="jenis_pembayaran">Pilih jenis pembayaran</string>
    <string name="jenis_pembayaran2">Jenis Pembayaran</string>
    <string name="diskon">Diskon</string>
    <string name="bayar">Bayar</string>
    <string name="kembalian">Kembalian</string>
    <string name="catatan">Catatan</string>
    <string name="sub_total">Sub Total</string>
    <string name="sub_total_arg"><u>Rp %1$.2f</u></string>
    <string name="diskon_arg"><u>%1$s</u>></string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="total_harga_arg">Rp.&#032;%1$s</string>
    <string name="nomor">No</string>
    <string name="produk">Produk</string>
    <string name="qty">Qty</string>
    <string name="total_bayar">Total Bayar</string>
    <string name="total">Total</string>
    <string name="lunas">LUNAS</string>
    <string name="belum_ada_data2">Belum ada data.</string>
    <string name="status_bayar_args">(%1$s)</string>
    <string name="backup_data">Backup Data</string>
    <string name="restore_data">Restore Data</string>
    <string name="edit_nama_toko">Edit Nama Toko</string>
    <string name="ok">OK</string>
    <string name="izin_penyimpanan"><b>Backup &amp; Restore Perlu Izin Penyimpanan</b></string>
    <string name="izinkan"><b>Izinkan</b></string>
    <string name="produk_dibeli_arg">: %1$s</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="status_bayar">Status Bayar</string>
    <string name="detail_transaksi_arg">%1$s</string>
    <string name="invoice_arg">Invoice : %1$s</string>
    <string name="satuan_per">Per /</string>
    <string name="kembali">Kembali</string>
    <string name="retur">Retur</string>
    <string name="alert_backup">Data transaksi yang telah dibackup tidak dapat diretur kembali ! Harap pastikan kembali data transaksi anda.</string>
    <string name="reset_pilihan">Reset Pilihan</string>
    <string name="barcode">Barcode</string>
    <string name="nama_produk">Nama Produk</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="backuping_data">Backuping data..</string>
    <string name="dummy_invoice">Invoice: CTK4208324829</string>
    <string name="dummy_produk">Bala-Bala (50 Pcs) : 50.000\nGehu Pedas (5 Pcs) : 75.000\nIkan Hiu (100 Pcs) : 1.000.000</string>
    <string name="bagi">:</string>
    <string name="dummy_tanggal">Senin, 18 Desember 2022 11:20</string>
    <string name="dummy_tanggal2">07 November 2022 15.02</string>
    <string name="dummy_status_bayar">(LUNAS)</string>
    <string name="dummy_line">------</string>
    <string name="no">No</string>
    <string name="dummy_nomor">1000</string>
    <string name="dummy_nama_produk">Momogi</string>
    <string name="dummy_deskripsi">Makanan ringan</string>
    <string name="dummy_satuanper">Kg</string>
    <string name="dummy_stok">0</string>
    <string name="dummy_counter">0</string>
    <string name="hint_bulan_tahun">Bulan Tahun</string>
    <string name="selectedMonthAndYearArg">%1$s %2$s</string>
    <string name="transaksi_tahun_arg">Transaksi Tahun %1$s</string>
    <string name="produk_tidak_boleh_kosong">Nama Produk Tidak Boleh Kosong !</string>
    <string name="deskripsi_tidak_boleh_kosong">Deskripsi Tidak Boleh Kosong !</string>
    <string name="modal_tidak_boleh_kosong">Modal Tidak Boleh Kosong !</string>
    <string name="harga_jual_tidak_boleh_kosong">Harga Jual Tidak Boleh Kosong !</string>
    <string name="satuan_warning">Satuan Tidak Boleh Kosong !</string>
    <string name="satuan_per_warning">Satuan Per Tidak Boleh Kosong !</string>
    <string name="stok_warning">Stok Awal Tidak Boleh Kosong !</string>
    <string name="berhasil_menyunting_produk">Berhasil menyunting produk !</string>
    <string name="produk_berhasil_ditambah">Produk berhasil ditambah !</string>
    <string name="retur_berhasil">Transaksi berhasil diretur !</string>
    <string name="retur_gagal">Transaksi ini tidak dapat diretur !</string>
    <string name="diretur">DIRETUR</string>
    <string name="zero">0</string>
    <string name="stok_kosong_arg">Stok %1$s kosong !</string>
    <string name="stok_tidak_cukup">Stok tidak cukup !</string>
    <string name="dialog_pembayaran">dialogPembayaran</string>
    <string name="prefix">CTK</string>
    <string name="produk_dibeli_arg2">%1$s (%2$s  %3$s) :   %4$s*</string>
    <string name="kurang_dari_total_bayar">Pembayaran kurang dari total bayar !</string>
    <string name="diskon_tidak_valid">Diskon Tidak Valid !</string>
    <string name="isi_pembayaran_dulu">Isi pembayaran terlebih dahulu !</string>
    <string name="jumlah_bayar_kurang_dari_total_bayar">Jumlah bayar kurang dari total bayar !</string>
    <string name="date_picker_title">Filter Data Grafik</string>
    <string name="format_hari_bulan">d MMM</string>
    <string name="dialog_transaksi">dialog_transaksi</string>
    <string name="press_once_again">Tekan sekali lagi untuk keluar</string>
    <string name="nama_toko_warning">Nama Toko Tidak Boleh Kosong !</string>
    <string name="photoPath">/BackupCatok/Logo Toko.png</string>
    <string name="restore_folder">/BackupCatok/</string>
    <string name="backup_folder">/BackupCatok</string>
    <string name="data_berhasil_direstore">Data berhasil direstore…</string>
    <string name="restoreMsgAneh2">it must not be null</string>
    <string name="restoreMsgAneh1">length</string>
    <string name="restoreMsgAneh3">For input</string>
    <string name="backup_warning">Tambah data produk / lakukan transaksi terlebih dahulu..</string>
    <string name="press_twice_to_backup">Klik 1x lagi untuk backup data..</string>
    <string name="nama_file_foto">Logo Toko.png</string>
    <string name="comma">,</string>
    <string name="minusOne">-1</string>
    <string name="selamat_datang">Selamat Datang\ndi aplikasi CaTok</string>
    <string name="text_onboarding">Aplikasi CaTok (Catatan Toko) ini hadir untuk mempermudah pemilik toko dalam mengelola data produk, transaksi, serta monitoring penjualan toko berdasarkan grafik.</string>
    <string name="izin_ditolak">Izin ditolak…</string>
    <string name="export_arg">Backup Telah diexport ke %1$s</string>
    <string name="tutup">Tutup</string>
    <string name="input_type">image/*</string>
    <string name="android_tidak_support">Android anda tidak support !</string>

</resources>