<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/berandaFragment"
        android:icon="@drawable/ic_beranda"
        android:title="@string/beranda"/>
    <item android:id="@+id/grafikFragment"
        android:icon="@drawable/ic_grafik"
        android:title="@string/grafik"/>
    <item android:id="@+id/pengaturanFragment"
        android:icon="@drawable/ic_pengaturan"
        android:title="@string/pengaturan"/>
</menu>